--- a/email-templates/ActivateAccount.html
+++ b/email-templates/ActivateAccount.html
@@ -3,39 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email Template</title>
+    <title>Activate Account</title>
     <style>
-        /* Add your custom styles here */
+        body, html {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            text-align: center;
+        }
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
         }
         .container {
             max-width: 600px;
             margin: 0 auto;
-            padding: 20px;
+            height: calc(100%);
+            position: relative;
             background-color: #ffffff;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+
+        }
+
+        .footer {
+            max-width: 100%;
+            background-color: #202930;
+            color: #ffffff;
+            padding: 10px;
+            text-align: center;
         }
         h1 {
             color: #333333;
         }
         p {
             color: #666666;
+            line-height: 150%;
+        }
+        .button {
+            background-color: #202930;
+            color: #ffffff;
+            text-decoration: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            display: inline-block;
+            margin: 32px 0;
+            transition: background-color 0.3s ease;
+        }
+        .button:hover {
+            background-color: #1a2129;
+        }
+        @media screen and (max-width: 600px) {
+            .container {
+                width: 100%;
+            }
+        }
+
+        .fa-handshake {
+            font-size: 55px;
+            color: #202930;
+        }
+
+        .header {
+            letter-spacing: 10px;
+        }
+
+        .top {
+            background-color: #202930;
+            flex: 1;
+            width: 100%;
+        }
+
+        .bottom {
+            flex: 1;
+        }
+
+        .center-card {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%,-50%);
+            background-color: #fff;
+            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            border-radius: 8px;
+            padding: 25px;
         }
     </style>
 </head>
 <body>
 <div class="container">
-    <h1>Your Email Heading</h1>
-    <p>Hello,</p>
-    <p>This is a basic HTML email template.</p>
-    <p>You can customize it according to your needs.</p>
-    <p>Regards,</p>
-    <p>Your Name</p>
+    <div class="top"></div>
+    <div class="bottom"></div>
+    <div class="center-card">
+        <div class="header">
+            <h1>WELCOME</h1>
+        </div>
+        <div class="hand-shake">
+            <i class="fa-solid fa-handshake"></i>
+        </div>
+        <div class="content">
+            <p>Hi, {{userName}}</p>
+            <p>We're excited to have you get started. First, you need to confirm your account. Just press the button below.</p>
+            <a href="{{activateAccountLink}}" class="button">Activate Your Account</a>
+        </div>
+    </div>
+    <div class="footer">
+        Inventory System - 2024
+    </div>
 </div>
 </body>
+<script src="https://kit.fontawesome.com/ac55437ec8.js" crossorigin="anonymous"></script>
 </html>
