--- a/email-templates/ActivateAccount.html
+++ b/email-templates/ActivateAccount.html
@@ -11,20 +11,13 @@
             padding: 0;
             box-sizing: border-box;
             text-align: center;
-        }
-        body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
         }
         .container {
-            max-width: 600px;
+            max-width: 420px;
             margin: 0 auto;
-            height: calc(100%);
-            position: relative;
             background-color: #ffffff;
-            display: flex;
-            flex-direction: column;
-
         }
 
         .footer {
@@ -33,6 +26,7 @@
             color: #ffffff;
             padding: 10px;
             text-align: center;
+            margin-top: 16px;
         }
         h1 {
             color: #333333;
@@ -40,16 +34,20 @@
         p {
             color: #666666;
             line-height: 150%;
+            padding: 0 20px;
+            text-align: center;
         }
         .button {
             background-color: #202930;
-            color: #ffffff;
+            color: #ffffff !important;
             text-decoration: none;
             padding: 10px 20px;
             border-radius: 5px;
-            display: inline-block;
-            margin: 32px 0;
+            display: block;
+            margin: 32px auto;
             transition: background-color 0.3s ease;
+            text-align: center;
+            width: fit-content;
         }
         .button:hover {
             background-color: #1a2129;
@@ -60,61 +58,39 @@
             }
         }
 
-        .fa-handshake {
-            font-size: 55px;
-            color: #202930;
-        }
-
         .header {
+            padding-top: 20px;
             letter-spacing: 10px;
+            text-align: center;
         }
 
-        .top {
-            background-color: #202930;
-            flex: 1;
-            width: 100%;
+        .hand-shake img {
+            max-width: 80px;
         }
 
-        .bottom {
-            flex: 1;
-        }
-
-        .center-card {
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%,-50%);
-            background-color: #fff;
-            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            border-radius: 8px;
-            padding: 25px;
+        .hand-shake {
+            width: fit-content;
+            margin: 0 auto;
         }
     </style>
 </head>
 <body>
 <div class="container">
-    <div class="top"></div>
-    <div class="bottom"></div>
-    <div class="center-card">
-        <div class="header">
-            <h1>WELCOME</h1>
-        </div>
-        <div class="hand-shake">
-            <i class="fa-solid fa-handshake"></i>
-        </div>
-        <div class="content">
-            <p>Hi, {{userName}}</p>
-            <p>We're excited to have you get started. First, you need to confirm your account. Just press the button below.</p>
-            <a href="{{activateAccountLink}}" class="button">Activate Your Account</a>
-        </div>
+    <div class="header">
+        <h1>WELCOME</h1>
     </div>
+    <div class="hand-shake">
+        <img src="https://i.ibb.co/N3FmWxL/hand-shake-icon.png" alt="Hand shake icon">
+    </div>
+    <div class="content">
+        <p>Hi, <b>{{userName}}</b></p>
+        <p>We're excited to have you get started. First, you need to confirm your account. Just press the button below.</p>
+        <a href="{{activateAccountLink}}" class="button" id="activateAccount">Activate Your Account</a>
+    </div>
+
     <div class="footer">
         Inventory System - 2024
     </div>
 </div>
 </body>
-<script src="https://kit.fontawesome.com/ac55437ec8.js" crossorigin="anonymous"></script>
 </html>
