login logic modified

--- a/public/dashboard/homepage.html
+++ b/public/dashboard/homepage.html
@@ -92,7 +92,7 @@
         <div class="login-body">
             <div class="form-group mb-2">
                 <label for="apiKey">Your key:</label>
-                <input type="text" id="apiKey" class="form-control" placeholder="Your API key" disabled>
+                <input type="text" id="apiKey" class="form-control" placeholder="Your API key" readonly disabled>
             </div>
 
             <button class="btn-insystem" id="copyBtn" value="Submit">Copy</button>
