--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -169,8 +169,7 @@
 			<hr class="horizontal-line">
 			<div class="footer-content">
 				<div class="footer-left">
-					<p class="username">Admin:</p>
-					<p class="email" id="adminEmail">example@domain.com</p>
+					<p class="username">Howdy admin</p>
 				</div>
 				<div class="footer-right">
 					<svg id="logoutBtn" width="40px" height="40px" viewBox="0 -0.5 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
