--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -192,7 +192,7 @@
     let iFrame = document.getElementById("custom-frame");
 
     //check for session params
-    let token = sessionStorage.getItem("adminToken");
+    let token = sessionStorage.getItem("token");
 
     if(token != null) {
         //remove disabled state from all links
